# typed-schema

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
typed-schema/: Cargo.toml
typed-schema-macros/: Cargo.toml
typed-schema-macros/src/: attr.rs  case.rs  lib.rs
typed-schema/src/: lib.rs
typed-schema/tests/: derive.rs  index.rs  tool.rs
typed-schema/tests/ui/fail/: calc_on_tuple_field.rs  calc_on_tuple_field.stderr  calc_on_type.rs  calc_on_type.stderr  directional_rename_all_without_shape.rs  directional_rename_all_without_shape.stderr  directional_rename_without_shape.rs  directional_rename_without_shape.stderr  flatten_with_shape_calc.rs  flatten_with_shape_calc.stderr  missing_op_output.rs  missing_op_output.stderr  missing_shape_name.rs  missing_shape_name.stderr  op_unknown_input_shape.rs  op_unknown_input_shape.stderr  partial_metric.rs  partial_metric.stderr  skipped_with_shape_calc.rs  skipped_with_shape_calc.stderr  unsupported_rename_all.rs  unsupported_rename_all.stderr
typed-schema/tests/ui/pass/: basic.rs
