[package]
name = "typed-schema"
version = "0.1.0"
edition = "2024"
description = "Business-neutral schema index primitives for typed schema"
license = "MIT OR Apache-2.0"

[dependencies]
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typed-schema-macros = { path = "../typed-schema-macros" }

[dev-dependencies]
trybuild = "1"
